[gd_scene load_steps=4 format=3 uid="uid://hud-scene"]

[ext_resource type="Script" path="res://scripts/ui/HUDController.gd" id=1]
[ext_resource type="PackedScene" path="res://scenes/ui/MobileControls.tscn" id=2]
[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.2)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="HUD" type="Control"]
script = ExtResource("1")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("1")
custom_minimum_size = Vector2(320, 160)

[node name="Info" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -180.0
offset_right = 140.0
offset_bottom = -20.0
alignment = 1
theme_override_constants/separation = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18

[node name="CreditsLabel" type="Label" parent="Info"]
text = "Credits: 0"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HeroLabel" type="Label" parent="Info"]
text = "Hero HP: -"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HQLabel" type="Label" parent="Info"]
text = "HQ HP: -"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="MessageLabel" type="Label" parent="Info"]
text = "Status: Waiting"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="MobileControls" parent="." instance=ExtResource("2")]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -220.0
theme_override_styles/panel = SubResource("1")
